# bt

./: .gitignore  .oxlintrc.json  .pre-commit-config.yaml  .prettierignore  .tool-versions  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TODO.txt  ascii-logo-blue-small.txt  ascii-logo-small.txt  bt-reporter-compliance-plan.md  bt-reporter-test-plan.md  build.rs  cli-plan.md  dist-workspace.toml  eval-reporter-design.md  eval-todo.md  install.sh  mise.toml  package.json  plan.md  pnpm-lock.yaml  research.md  tsconfig.json
.github/workflows/: github-actions-reporter-example.yml  pre-commit.yml  publish-npm.yml  release-bump-pr.yml  release-canary.yml  release.yml  smoke-install-minimal.yml  tag-on-version-bump.yml  test-azure-oidc.yml  test-signing-self-signed.yml  tests.yml
docs/: topics-cli-spec.md
docs/plans/: 2026-04-09-datasets-test-commands.md  2026-04-09-feat-datasets-list-view-delete-plan.md  2026-04-10-feat-datasets-create-plan.md
examples/eval-reporters/: README.md  github-actions.eval.ts  package.json  (+1 more)
npm/: targets.json
scripts/: benchmark.sh  data-runner.py  data-runner.ts  dataset-pipeline-runner.py  dataset-pipeline-runner.ts  eval-runner-impl.ts  eval-runner.mts  eval-runner.py  eval-runner.ts  functions-bundler.ts  functions-runner.py  functions-runner.ts  python_runner_common.py  runner-common.ts  runner_common.py  skill-smoke-test.sh  views-preview.html  views-runner.mjs  views-runner.ts  views-sdk.ts
src/: agents.rs  api.rs  args.rs  auth.rs  bt_dir.rs  config.rs  env.rs  eval.rs  http.rs  init.rs  js_runner.rs  login.rs  logs3_uploader.rs  loop_cmd.rs  main.rs  project_command.rs  project_context.rs  python_runner.rs  resource_cmd.rs  runner_sse.rs  scorers.rs  self_update.rs  source_language.rs  spark.rs  sql.rs  status.rs  switch.rs  sync.rs  tools.rs  traces.rs  update.rs  util_cmd.rs  views.rs
tests/: cli.rs  datasets.rs  eval_dev_server.rs  eval_fixtures.rs  eval_golden.rs  eval_loop_skill.rs  functions.rs  init.rs  setup_cli.rs  setup_e2e.rs
(+393 files in other folders)
