[package]
name = "bt"
version = "0.7.1"
edition = "2021"
rust-version = "1.86.0"
authors = ["Braintrust engineering <eng@braintrust.dev>"]
description = "The Braintrust command line interface"
license = "Apache-2.0"
repository = "https://github.com/braintrustdata/bt"

[package.metadata.wix]
upgrade-guid = "5B558F98-EEBD-4F5E-A0C8-E7A039445139"
path-guid = "7CD3044D-A62A-469C-8552-0E5C3A00FFF1"
license = false
eula = false

[dependencies]
actix-web = "4.11.0"
anyhow = "1.0.89"
backoff = { version = "0.4.0", features = ["tokio"] }
braintrust-sdk-rust = { git = "https://github.com/braintrustdata/braintrust-sdk-rust", rev = "43ba73edbf5220b57090e049feb094b60a92fcd4" }
clap = { version = "4.5.20", features = ["derive", "env"] }
crossterm = "0.28.1"
futures-util = "0.3.31"
indicatif = "0.17.8"
ratatui = "0.29.0"
reqwest = { version = "0.12.7", default-features = false, features = ["json", "rustls-tls-native-roots"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
toml = "0.8"
sha2 = "0.10.8"
strip-ansi-escapes = "0.2.0"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros", "process", "net", "signal"] }
unicode-width = "0.1.13"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
dotenvy = "0.15"
open = "5"
regex = "1"
urlencoding = "2"
lingua = { git = "https://github.com/braintrustdata/lingua", rev = "3c79f2c427d12d3e2fe104910ef3c0768ad83770" }
comfy-table = "7.2.2"
base64 = "0.22"
oauth2 = { version = "4.4", default-features = false }
getrandom = "0.3"
chrono = { version = "0.4.40", features = ["clock"] }
dirs = "5"
pathdiff = "0.2.3"
glob = "0.3"
flate2 = "1.1.2"

[profile.dist]
inherits = "release"
lto = "thin"

[workspace]
members = ["."]

[dev-dependencies]
tempfile = "3"
assert_cmd = "2.2.0"
predicates = "3.1.4"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Storage_FileSystem"] }
